@@ -1,3 +1,6 @@
+ClipIt-v1.2.4-12112010001 - 12 Nov. 2010
+	+ Fixed: Fixed 2 small omitions from previous changes.
+
 ClipIt-v1.2.3-11112010002 - 11 Nov. 2010
 	+ Fixed: Fixed the manpage so it now aligns to the conventions for 
 			writing Linux man pages.
